<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:text="@string/trivia_questions"
        android:textColor="@color/textColor"
        android:textSize="36sp"
        app:fontFamily="@font/chewy" />

    <TextView
        android:id="@+id/count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pageTitle"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/count"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        app:fontFamily="@font/chewy" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pageTitle"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/score"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        app:fontFamily="@font/chewy" />

    <TextView
        android:id="@+id/highScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pageTitle"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/high_score"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        app:fontFamily="@font/chewy" />


    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/count"
        android:layout_marginTop="15dp"
        app:cardBackgroundColor="@android:color/white">

        <TextView
            android:id="@+id/statement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/statement"
            android:textColor="@color/textColor"
            android:textSize="14sp"
            app:fontFamily="@font/chewy" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card"
        android:layout_marginTop="20dp"
        android:weightSum="6">

        <ImageButton
            android:id="@+id/prev_button"
            android:layout_width="18dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:contentDescription="@string/previous_question"
            app:srcCompat="@android:drawable/ic_media_previous" />

        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="2"
            android:background="@color/colorAccent"
            android:text="@string/true_title"
            android:textColor="@color/colorPrimary"
            app:fontFamily="@font/chewy" />

        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="2"
            android:background="@color/colorAccent"
            android:text="@string/false_title"
            android:textColor="@color/colorPrimary"
            app:fontFamily="@font/chewy" />

        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="18dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:contentDescription="@string/nextquestion"
            app:srcCompat="@android:drawable/ic_media_next" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="15dp"
        android:onClick="shareDetails"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_share_white_24dp"
        android:layout_marginEnd="15dp" />

</RelativeLayout>